--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -4,9 +4,11 @@
 body{
   margin: 0;
 }
+.container{
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
 .navbar__container{
   align-items: center;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
   justify-content: space-between;
   max-width: 1200px;
